New events had been added.
git-svn-id: http://chianti.ucsd.edu/svn@22336 0ecc0d97-ab19-0410-9704-bfe1a75892f5